k8s-resources/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: stage
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - api.studyhall.dev
    - wbs.studyhall.dev
    - studyhall.dev
    secretName: studyhall-tls
  rules:
  - host: api.studyhall.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: studyhall-api-platform
            port:
              number: 80
  - host: wbs.studyhall.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wbs
            port:
              number: 80
